before prisma
